backend finished without ai